# Nook-iin

./: ACKNOWLEDGMENTS.md  CHANGELOG.md  CITATION.cff  FePS3.vasp  Interface.py  Interface_Guide.md  README.md  README_Nookiin_bilingual.md  Untitled.ipynb  WS2.vasp  WSe2.vasp  consola.py  demo.py  graphene.vasp  hBN.vasp  prueba.py  pyproject.toml
Examples/: Seccion_01.md  Seccion_02.md  Seccion_03.md  Seccion_04.md  Seccion_05.md  Seccion_06.md
Examples/English/: 01_Complete_Example.ipynb  03_Example_Heterostructure.ipynb  04_Example_Results_AngleInterval.ipynb  05_Example_Diffraction_Map.ipynb  06_Example_bilayer_hBN.py
Examples/English/VASP_Files/: FePS3-G24_07_m.vasp  FePS3-Grahene24_07(opt).vasp  (+9 more)
Examples/Español/: 01_Ejemplo_Completo.ipynb  02_Ejemplo_tBLG.ipynb  03_Ejemplo_Heteroestructura.ipynb  04_Ejemplo_Resultados_IntervaloAngular.ipynb  05_Ejemplo_Mapa_de_difracción.ipynb  06_Ejemplo_Bicapas_hBN.py
Interface_Guide/: Guia_de_interfaz.md  Interface_Guide.md
VASP_Files/: 01-graphene.vasp  02-ws2.vasp  Det7.vasp  FePS3.vasp  Graphite.vasp  Ph.vasp  Sistema Ejemplo.vasp  Sistema Grafeno-beta_GeSe(13_52).vasp  Sistema Gx10.vasp  SistemaGx10.vasp  Sistema_Minimo.vasp  Sistema_Sugerido.vasp  SuperLattice [Grafeno] [Grafeno(24_80°)'].vasp  SuperLattice [Grafeno] [Grafeno(3_15°)'].vasp  WS2.vasp  graphene.vasp
menu_texts/: texts_en.py  texts_es.py
src/: Atom.py  Funciones.py  Functions.py  Lattice.py  System.py  analyzer.py  basics.py
src/nookiin/: __init__.py  __main__.py  atom.py  basics.py  functions.py  interface.py  lattice.py  system.py
(+305 files in other folders)
